# LiveSTT

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .safety-project.ini  .secrets.baseline  00_project_context.md  404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changelog.md  Dockerfile  GEMINI-TASKS.md  GEMINI.md  LICENSE.md  README.md  ROADMAP.md  SECURITY.md  TODO.md  bootstrap.py  docker-compose.dev.yml  docker-compose.file-test.yml  docker-compose.yml  index.html  justfile  lint_output.txt  mise.toml  mkdocs.yml  mypy.ini  objects.inv  out.txt  prepare-commit-msg.py  pyproject.toml  pytest.ini  readthedocs.yaml  ruff.toml  (+8 more)
.claude/: settings.local.json
.claude/agents/: code-implementer.md  code-reviewer.md  software-architect.md
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  dependeabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bump-version.yaml  deploy-docker.yaml  deploy.yaml  docs.yaml  main.yaml  release.yaml
00_meta/compliance_matrix/: index.html
00_meta/project_charter/: index.html
00_meta/raci_matrix/: index.html
10_requirements/prd/: index.html
10_requirements/traceability_matrix/: index.html
10_requirements/user_journey_maps/: index.html
20_architecture/architecture_definition/: index.html
20_architecture/hsi/: index.html
20_architecture/system_design_v7.3/: index.html
20_architecture/system_design_v8.0/: index.html
20_architecture/threat_model/: index.html
30_data/biometric_policy/: index.html
30_data/data_dictionary/: index.html
30_data/erd/: index.html
40_hardware/assembly_guide/: index.html
40_hardware/environmental_constraints/: index.html
40_hardware/fru_guide/: index.html
40_hardware/hbom/: index.html
50_qa/master_test_plan/: index.html
50_qa/penetration_test_report/: index.html
50_qa/performance_benchmarks/: index.html
50_qa/vpat/: index.html
60_ops/air_gap_update/: index.html
60_ops/cicd/: index.html
60_ops/deployment_checklist/: index.html
60_ops/drp/: index.html
60_ops/nats_tooling/: index.html
60_ops/runbooks/: index.html
60_ops/sbom/: index.html
60_ops/secrets_manifest/: index.html
70_legal/dpia/: index.html
70_legal/eula/: index.html
70_legal/license_attestation/: index.html
90_optional/faq/: index.html
90_optional/glossary/: index.html
90_optional/troubleshooting/: index.html
ToDo/: index.html
api/: index.html
config/: initial_phrases.json
docs/: api.md  documentation-review-prompt.md  index.md  next-work-prompt.md  quickstart.md  roadmap_draft.md  system_design.md  temp.md
docs/00_meta/: project_charter.md
docs/10_requirements/: prd.md  traceability_matrix.md  user_journey_maps.md
docs/20_architecture/: architecture_definition.md  design_review_2026_03.md  hsi.md  system_design_v7.3.md  system_design_v8.0.md  threat_model.md
docs/30_data/: biometric_policy.md  data_dictionary.md  erd.md
docs/40_hardware/: assembly_guide.md  environmental_constraints.md  hbom.md
docs/50_qa/: master_test_plan.md  (+4 more)
libs/messaging/: pyproject.toml
libs/messaging/src/messaging/: nats.py  service.py  streams.py
quickstart/: index.html
scripts/: check-adr-in-mkdocs.py  generate_dockerignore.py  mine_phrases.py  nats_streams.py  new_adr.py  run_integration_tests.py  scaffold_context.py  setup_dev.py  status.py  type_check.py
search/: search_index.json
services/api-gateway/: DockerFile  Dockerfile  README.md  config.py  pyproject.toml
services/api-gateway/src/: main.py
services/api-gateway/src/api_gateway/: auth.py  db.py  export.py  main.py  status.py
services/api-gateway/src/api_gateway/static/: admin.html  display.html  index.html  shared.js
services/api-gateway/tests/: test_admin_logs_and_speakers.py  test_api_error_handling.py  test_auth_and_status.py  test_backup_restore.py  test_integration.py  test_main.py  test_session_endpoints.py  test_session_retention.py  test_setup.py  test_transcript_persistence.py
services/audio-classifier/: Dockerfile  pyproject.toml
services/audio-classifier/src/audio_classifier/: classifiers.py  interfaces.py  main.py
services/audio-classifier/tests/: conftest.py  test_classifiers.py  test_service.py
services/audio-producer/: DockerFile.mock  Dockerfile  pyproject.toml
services/audio-producer/src/: audiosource.py  main.py  producer.py
services/audio-producer/src/audio_producer/: audiosource.py  interfaces.py  main.py
services/audio-producer/tests/: mocks.py  test_audioproducer.py  test_audiosource.py  test_integration.py  test_integration_audio.py  test_producer.py  test_session_state_machine.py
services/data-sweeper/: Dockerfile  pyproject.toml
services/data-sweeper/src/data_sweeper/: main.py
services/data-sweeper/tests/: test_data_sweeper.py
services/health-watchdog/: Dockerfile  pyproject.toml
services/health-watchdog/src/health_watchdog/: main.py
services/health-watchdog/tests/: test_health_watchdog.py
services/identifier/: Dockerfile  pyproject.toml
services/identifier/src/identifier/: embedder.py  interfaces.py  main.py  store.py
services/identifier/tests/: test_embedder.py  test_pipeline.py  test_store.py
services/identity-manager/: Dockerfile  pyproject.toml
services/identity-manager/src/identity_manager/: main.py
services/identity-manager/tests/: test_identity_manager.py
services/stt-provider/: DockerFile  Dockerfile  README.md  pyproject.toml
services/stt-provider/src/: main.py
services/stt-provider/src/stt_provider/: deepgram_adapter.py  interfaces.py  main.py  service.py
services/stt-provider/tests/: conftest.py  mock_transcriber.py  mocks.py  test_api_key_safety.py  test_deepgram_adapter.py  test_service.py  test_stt_error_handling.py  test_stt_provider.py
services/system-manager/: Dockerfile  pyproject.toml
services/system-manager/src/system_manager/: containers.py  main.py
services/system-manager/tests/: test_containers.py  test_system_manager.py
tests/: conftest.py  test_init.py  test_scaffold_context.py  test_settings.py
(+67 files in other folders)
