[project]
name = "live-stt-monorepo"
version = "1.0.0"
description = "Monorepo for High-Reliability STT Appliance"
authors = [
    { name = "Tom Dakan", email = "tomdakan@gmail.com" },
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "GPL-3.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
]
# The root has NO runtime dependencies.
# Dependencies (like typed-settings) belong in services/*/pyproject.toml
dependencies = [
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
major_on_zero = false
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "uv build"

[tool.uv.workspace]
members = ["services/*", "libs/*"]

[tool.uv.sources]
messaging = { workspace = true }
api-gateway = { workspace = true }
audio-producer = { workspace = true }
stt-provider = { workspace = true }

# ==============================================================================
# SHARED TOOL CONFIGURATION
# ==============================================================================

[tool.ruff]
line-length = 90
target-version = "py312"
src = ["src", "services"]
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "migrations",
]

[tool.ruff.lint]
select = [
    "A", "E", "F", "W", "I", "UP", "B", "C90", "SIM", "PERF", "RUF"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B018", "S101"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
markers = [
    "unit: Marks fast, self-contained unit tests.",
    "integration: Marks tests that require external resources.",
    "slow: Marks tests that are slow to run.",
    "network: Marks tests that require a live network connection.",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"

[tool.bandit]
targets = ["services"]
exclude = ["tests", ".venv", "services/*/tests"]
level = "MEDIUM"
confidence = "MEDIUM"

[tool.coverage.run]
source = ["services"]
omit = ["tests*", "*/__main__.py"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "commitizen",
    "mypy",
    "safety",
    "bandit",
    "python-semantic-release",
    "websockets>=15.0.1",
    "nats-py>=2.12.0",
    "pre-commit>=4.5.0",
    "api-gateway",
    "audio-producer",
    "messaging",
    "stt-provider",
    "basedpyright>=1.35.0",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]
