[project]
name = "live-stt-monorepo"
version = "0.7.0"
description = "Monorepo for High-Reliability STT Appliance"
authors = [
    { name = "Tom Dakan", email = "tomdakan@gmail.com" },
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "GPL-3.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
]
# The root has NO runtime dependencies.
# Dependencies (like typed-settings) belong in services/*/pyproject.toml
dependencies = [
    "nats-py>=2.12.0",
]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
    "services/api-gateway/pyproject.toml:project.version",
    "services/audio-classifier/pyproject.toml:project.version",
    "services/audio-producer/pyproject.toml:project.version",
    "services/data-sweeper/pyproject.toml:project.version",
    "services/health-watchdog/pyproject.toml:project.version",
    "services/identifier/pyproject.toml:project.version",
    "services/identity-manager/pyproject.toml:project.version",
    "services/stt-provider/pyproject.toml:project.version",
    "libs/messaging/pyproject.toml:project.version",
]
major_on_zero = false
allow_zero_version = true
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "true"
commit_version_number = true
tag_commit = true
tag_format = "v{version}"
# Ignore commits that might be misidentified as breaking or major
exclude_commit_patterns = [
    '''^bump: version.*''',
]

[tool.uv.workspace]
members = ["services/*", "libs/*"]

[tool.uv.sources]
messaging = { workspace = true }
api-gateway = { workspace = true }
audio-producer = { workspace = true }
stt-provider = { workspace = true }
identity-manager = { workspace = true }
health-watchdog = { workspace = true }
data-sweeper = { workspace = true }
audio-classifier = { workspace = true }
identifier = { workspace = true }

# ==============================================================================
# SHARED TOOL CONFIGURATION
# ==============================================================================

[tool.ruff]
line-length = 90
target-version = "py312"
src = ["src", "services"]
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "migrations",
]

[tool.ruff.lint]
select = [
    "A", "E", "F", "W", "I", "UP", "B", "C90", "SIM", "PERF", "RUF"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B018", "S101"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests", "services/*/tests"]
markers = [
    "unit: Marks fast, self-contained unit tests.",
    "integration: Marks tests that require external resources.",
    "slow: Marks tests that are slow to run.",
    "network: Marks tests that require a live network connection.",
]



[tool.bandit]
targets = ["services", "libs", "tests"]
exclude_dirs = ["tests", ".venv", "*/tests", "**/tests"]
skips = ["B101"] # Skip assert_used globally for simplicity in a repo with many tests
level = "MEDIUM"
confidence = "MEDIUM"

[tool.coverage.run]
source = ["services"]
omit = ["tests*", "*/__main__.py"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "commitizen",
    "mypy",
    "safety",
    "bandit",
    "python-semantic-release",
    "websockets>=15.0.1",
    "nats-py>=2.12.0",
    "pre-commit>=4.5.0",
    "api-gateway",
    "audio-producer",
    "messaging",
    "stt-provider",
    "audio-classifier",
    "identifier",
    "identity-manager",
    "health-watchdog",
    "data-sweeper",
    "basedpyright>=1.35.0",
    "python-dotenv>=1.2.1",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]
[tool.basedpyright]
typeCheckingMode = "basic"
extraPaths = [
    "services/api-gateway/src",
    "services/audio-producer/src",
    "services/stt-provider/src",
    "services/data-sweeper/src",
    "services/health-watchdog/src",
    "services/identifier/src",
    "services/audio-classifier/src",
    "libs/messaging/src",
    "services/stt-provider/tests",
]

[tool.mypy]
python_version = "3.12"
mypy_path = ["services", "libs/src"]
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
pretty = true
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "nats.*"
ignore_missing_imports = true
