[project]
name = "messaging"
version = "0.4.1"
description = "Shared NATS messaging utilities and mocks"
authors = [{ name = "Tom Dakan", email = "tomdakan@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "nats-py>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/messaging"]

[tool.ruff]
extend = "../../ruff.toml"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
