[project]
name = "audio-classifier"
version = "0.4.0"
description = "Audio Classifier Service"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
audio-classifier = "audio_classifier.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend = "../../ruff.toml"
