[project]
name = "audio-classifier"
version = "0.8.0"
description = "Audio Classifier Service"
requires-python = ">=3.12"
dependencies = [
    "nats-py>=2.6.0",
    "numpy>=1.26.0",
    "openvino>=2024.0.0",
]


[project.scripts]
audio-classifier = "audio_classifier.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend = "../../ruff.toml"
