[project]
name = "audio-producer"
version = "0.1.0"
description = "Captures audio from hardware and publishes to NATS"
authors = [{name = "Tom Dakan", email = "tomdakan@gmail.com"}]
requires-python = ">=3.12"
dependencies = [
    "nats-py>=2.6.0",
    "pyalsaaudio>=0.10.0; sys_platform == 'linux'",
    "numpy>=1.26.0",
]

[project.scripts]
audio-producer = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.mypy.overrides]]
module = "producer"
python_version = "3.12"
