[project]
name = "data-sweeper"
version = "0.5.0"
description = "Data Sweeper Service"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
data-sweeper = "data_sweeper.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend = "../../ruff.toml"
