[project]
name = "data-sweeper"
version = "0.9.0"
description = "Data Sweeper Service"
authors = [
    { name = "Tom Dakan", email = "tomdakan@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "messaging",
]

[tool.uv.sources]
messaging = { workspace = true }

[project.scripts]
data-sweeper = "data_sweeper.main:main"

[tool.ruff]
extend = "../../pyproject.toml"

[tool.basedpyright]
extend = "../../pyproject.toml"
