[project]
name = "health-watchdog"
version = "0.14.0"
description = "Health Watchdog Service"
authors = [
    { name = "Tom Dakan", email = "tomdakan@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "messaging",
]

[tool.uv.sources]
messaging = { workspace = true }

[project.scripts]
health-watchdog = "health_watchdog.main:main"

[tool.ruff]
extend = "../../pyproject.toml"

[tool.basedpyright]
extend = "../../pyproject.toml"
