[project]
name = "system-manager"
version = "0.11.0"
description = "System Manager Service — stream stats, scheduling, retention"
authors = [
    { name = "Tom Dakan", email = "tomdakan@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "messaging",
    "httpx>=0.27.0",
    "tzdata>=2024.1",
]

[tool.uv.sources]
messaging = { workspace = true }

[project.scripts]
system-manager = "system_manager.main:main"

[tool.ruff]
extend = "../../ruff.toml"

[tool.basedpyright]
extend = "../../pyproject.toml"
